--- a/translations/texts/quests/fu_questlines/science/chemistry/fuquest_biochem.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/science/chemistry/fuquest_biochem.questtemplate.json
@@ -31,7 +31,8 @@
       ]
     },
     "Texts": {
-      "Eng": "^orange;Mulch^reset; is useful in a ^orange;Growing Tray^reset; as a ^green;weak fertilizer^reset;. You can craft all sorts of chemicals, plastics and lab-made materials. Be sure to upgrade the ^orange;Alchemy Table^reset; when you can!"
+      "Eng": "^orange;Mulch^reset; is useful in a ^orange;Growing Tray^reset; as a ^green;weak fertilizer^reset;. You can craft all sorts of chemicals, plastics and lab-made materials. Be sure to upgrade the ^orange;Alchemy Table^reset; when you can!",
+      "Chs": "^orange;护根^reset;在^orange;木制托盘中有用^reset;作为^green;；弱肥^reset;。你可以制作各种化学品、塑料和实验室制造的材料。当你可以的时候，请确保升级^orange;炼金桌^reset;"
     }
   }
 ]
